adding scipy as a requirement

--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can change the formatting of the plot by issuing additional optional arguments to the function plot."
+    "We can change the formatting of the plot by issuing additional optional arguments to the function plot.  In this case, we plot the points as small circles and omit the line connencting them."
    ]
   },
   {
