adding notebooks for numerical integration of ode's and symbolic algebra

--- a/index.ipynb
+++ b/index.ipynb
@@ -11,8 +11,8 @@
     "\n",
     "- symbolic algebra and calculus\n",
     "- [plotting](./plotting.ipynb)\n",
-    "- [solving equations](./solver.ipynb)\n",
-    "- solving ordinary differential equations\n",
+    "- [solving algebraic equations](./solver.ipynb)\n",
+    "- [solving ordinary differential equations](./odeint.ipynb)\n",
     "- introduction to linear algebra\n",
     "- complex numbers\n"
    ]
