--- a/index.ipynb
+++ b/index.ipynb
@@ -9,7 +9,7 @@
     "This is the repository for on-line Jupyter notebooks for CP213.\n",
     "\n",
     "\n",
-    "- symbolic algebra and calculus\n",
+    "- [symbolic algebra and calculus](./symbolicalgebra.ipynb)\n",
     "- [plotting](./plotting.ipynb)\n",
     "- [solving algebraic equations](./solver.ipynb)\n",
     "- [solving ordinary differential equations](./odeint.ipynb)\n",
