--- a/notebooks/python_lists.ipynb
+++ b/notebooks/python_lists.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Lists in Python\n",
     "\n",
-    "Previously, we have learned that variables in Python can take on values that are either numbers (e.g., integer or floating point numbers) or strings.  However, we only considered variables as having a single value.  Lists are variables that are collections are values.\n"
+    "Previously, we have learned that [variables](python_variables.ipynb) in Python can take on values that are either numbers (e.g., integer or floating point numbers) or strings.  However, we only considered variables as having a single value.  Lists are variables that are collections are values.\n"
    ]
   },
   {
@@ -311,11 +311,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "[Next up](python_dictionaries.ipynb), we'll look at another Python datatype, dictionaries."
+   ]
   }
  ],
  "metadata": {
@@ -334,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
