--- a/notebooks/python_conditionals.ipynb
+++ b/notebooks/python_conditionals.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `if` keyword starts a conditional block, which is followed by a condition. The condition is any object which Python will try to decide if it is \"truthy\" or not, we'll discuss this in more detail in a bit. After the condition comes a colon which introduces the body of statements executed *if the condition is true*, separated from the rest of the code by indenting in by 4 spaces (or a tab). After this, you can include an `else:` statement which introduces the statements executed if condition is false.\n",
+    "The `if` keyword starts a conditional block, which is followed by a condition. The condition is any object which Python will try to decide if it is \"truthy\" or not, we'll discuss this in more detail in a bit. After the condition comes a colon which introduces the body of statements executed *if the condition is true*, separated from the rest of the code by **indenting** in by 4 spaces (or a tab). After this, you can include an `else:` statement which introduces the statements executed if condition is false.\n",
     "\n",
     "Conditions are formed of comparisons. Python has all the normal numerical comparison operators you'd know from maths:"
    ]
