--- a/notebooks/python_dictionaries.ipynb
+++ b/notebooks/python_dictionaries.ipynb
@@ -4,13 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python dictionaries and lists\n",
+    "# Python dictionaries\n",
     "\n",
-    "In the [last notebook](python_variables.ipynb) we introduced simple variables, and touch on objects and types. Here, we'll introduce two types of object: a `dict` or dictionary, and a `list`. \n",
+    "In the [last notebook](python_variables.ipynb) we introduced `lists` in Python, here we'll introduce another data type: a dictionary, or a `dict`.\n",
     "\n",
-    "An everyday dictionary is a collection of words, with their definition. In Python, a `dict` is very similar: you have a set of keys, with an object associated with each one. You can use a dictionary to store data in a nice, neat manner.\n",
-    "\n",
-    "A `list` is like it sounds: a list of objects."
+    "An everyday dictionary is a collection of words, with their definition. In Python, a `dict` is very similar: you have a set of keys, and a set of values; you could think of this as two lists joined together."
    ]
   },
   {
@@ -22,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,30 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Menu\n",
-      "  hot dog (£1.20)\n",
-      "  burger (£2.10)\n",
-      "  chips (£1.00)\n",
-      "  pizza (£1.50)\n",
-      "\n",
-      "Order\n",
-      "  hot dog (£1.20)\n",
-      "  burger (£2.10)\n",
-      "  hot dog (£1.20)\n",
-      "  burger (£2.10)\n",
-      "  pizza (£1.50)\n",
-      "  pizza (£1.50)\n",
-      "Order total = £9.60\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Menu')\n",
     "for key in menu:\n",
@@ -113,21 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Menu\n",
-      "  hot dog (£1.20)\n",
-      "  burger (£2.10)\n",
-      "  chips (£1.00)\n",
-      "  pizza (£1.50)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Menu')\n",
     "for key, value in menu.items():\n",
@@ -168,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "wt = {}\n",
     "wt['O2']  = 16.0 \n",
     "wt['CO']  = 4.0  \n",
-    "wt['CO2'] = 14.0\n",
+    "wt['CO2'] = 17.0\n",
     "wt['N2']  = 63.0 \n",
     "\n",
     "Mw = {}\n",
@@ -194,21 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total moles: 3.21 mol\n",
-      "mol% O2 = 15.57%\n",
-      "mol% CO = 4.45%\n",
-      "mol% CO2 = 9.91%\n",
-      "mol% N2 = 70.07%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = 0.0\n",
     "\n",
