--- a/notebooks/python_functions.ipynb
+++ b/notebooks/python_functions.ipynb
@@ -26,13 +26,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's dissect this a little. The `def` (for define) keyword tells Python what follows is a function. Then we have the function's name (`foo` in this case) followed by the arguments in parentheses. The body of the function is *indented* in by a tab or four spaces. (Or 2, Python doesn't care as long as its a consistent number.)\n",
+    "Let's dissect this a little. The `def` (for define) keyword tells Python what follows is a function. Then we have the function's name (`foo` in this case) followed by the arguments in parentheses. \n",
+    "\n",
+    "The body of the function is ***indented*** in by a tab or four spaces. (Or 2, Python doesn't care as long as its a consistent number.) Indentation is the way python splits up code into separate pieces. For a function here, the indentation says \"run this indented block with the function name is placed in other places\".\n",
+    "\n",
+    "A `# comment` is a bit of text that python ignores. A comment is started by writing a hash symbol '#', then anything after that will be ignore by Python. This let's us add in descriptive messages about what our code means.\n",
     "\n",
     "There are two types of function arguments:\n",
     " - Positional arguments\n",
     " - Keyword arguments\n",
     " \n",
-    "The former are given in order when calling the function, the latter are given a default value *and don't need to be given when calling*. Positional arguments position is very important, while keyword arguments can be specified by name in any order."
+    "The former are given in order when calling the function, the latter are given a default value *and don't need to be given when calling*. Positional arguments position is very important, while keyword arguments can be specified by name in any order.\n",
+    "\n",
+    "**Side note**: Positional arguments and keyword arguments reflect the two core data structures in Python: lists and dictionaries. Positional arguments are just an *unpacked* list, and keyword arguments are just an *unpacked* dictionary. Remember: an unpacked list is just a list without the brackets, same goes for a dictionary."
    ]
   },
   {
