--- a/notebooks/python_variables.ipynb
+++ b/notebooks/python_variables.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Introduction 2: Python has variables\n",
+    "# Python is a calculator *with variables*\n",
     "\n",
-    "In the [last notebook](python_1_calculator.ipynb), we used python as a simple calculator. Now, we can accelerate things with ***variables***!"
+    "In the [last notebook](python_calculator.ipynb), we used Python as a simple calculator. Now, we can accelerate things with ***variables***!"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,20 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.5707963"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pi /2"
    ]
@@ -69,25 +58,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see the value of a variable, we just need to execute it alone in Python:"
+    "To see the value of a variable, we could execute it alone in Python:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.1415926"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pi"
    ]
@@ -103,17 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value of pi is: 3.1415926\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('The value of pi is:', pi)"
    ]
@@ -154,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,20 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mol% O2  =  15.571284125379172 %\n",
-      "mol% CO  =  4.4489383215369065 %\n",
-      "mol% CO2 =  9.908998988877656 %\n",
-      "mol% N2  =  70.07077856420628 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('mol% O2  = ', mol_perc_O2, '%')\n",
     "print('mol% CO  = ', mol_perc_CO, '%')\n",
@@ -282,34 +241,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We haven't had to retype the mol values as we did in the last notebook. Now if we wanted to alter our input composition, it would be as simple as changing the four values at the start of this section, and hitting the re-run button on this notebook (⟳). Much easier!"
+    "We haven't had to retype the mol values as we did in the last notebook. Now if we wanted to alter our input composition, it would be as simple as changing the four values at the start of this section, and hitting the re-run button on this notebook (⏩). Much easier!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### An aside: f-strings\n",
+    "## An aside: f-strings\n",
     "\n",
     "We've used the print function here to join our number to a text string, resulting in numbers with entirely too many decimal places and extra spacing where we might not want it. However there is a much better way: format-strings (AKA f-strings). This is a string, with an f prepended. In this string, we can include special format tags which allow us to include *any* variable within the string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The value of pi is 3.1415926'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f'The value of pi is {pi}'"
    ]
@@ -323,20 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The syntax of an f-string is f\"text {variable}\". The value of pi is 3.1415926.'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f'The syntax of an f-string is f\"text {{variable}}\". The value of pi is {pi}.'"
    ]
@@ -350,20 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The value of pi to 2dp is 3.14'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f'The value of pi to 2dp is {pi:.2f}'"
    ]
@@ -377,20 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mol% O2  = 15.57%\n",
-      "mol% CO  = 4.45%\n",
-      "mol% CO2 = 9.91%\n",
-      "mol% N2  = 70.07%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'mol% O2  = {mol_perc_O2:.2f}%')\n",
     "print(f'mol% CO  = {mol_perc_CO:.2f}%')\n",
@@ -402,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Another aside: types\n",
+    "## Another aside: types\n",
     "\n",
     "Variables explained another way, are a *name* given to an *object*. An object in python is anything and everything. A number is an object, a function is an object, a string is an object. Those things are just *types* of object. Types tell you what an object can do or what to do with it.\n",
     "\n",
@@ -429,9 +344,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
+    "## Conclusion\n",
     "\n",
-    "In this notebook, we've seen the power of variables and how they're useful to drastically reduce the amount of retyping required in the process of a calculation. We've touch slightly on the function syntax in python, which we'll go into much more detail later. In the [next notebook](python_3_dictionaries.ipynb) we'll talk about structuring data."
+    "In this notebook, we've seen the power of variables and how they're useful to drastically reduce the amount of retyping required in the process of a calculation. We've touch slightly on the function syntax in python, which we'll go into much more detail later. In the [next notebook](python_lists.ipynb) we'll talk about structuring data."
    ]
   }
  ],
@@ -451,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
