--- a/tutorials/week1.ipynb
+++ b/tutorials/week1.ipynb
@@ -108,8 +108,8 @@
     "for gas, coeff in nu.items():\n",
     "    # TODO sum up Hrxn and Grxn here <---------------------------------\n",
     "\n",
-    "print(f'standard enthalpy of reaction: {Hrxn} J mol^{{-1}}')    \n",
-    "print(f'standard Gibbs energy of reaction: {Grxn} J mol^{{-1}}')"
+    "print(f'standard enthalpy of reaction: {Hrxn} kJ mol^{{-1}}')    \n",
+    "print(f'standard Gibbs energy of reaction: {Grxn} kJ mol^{{-1}}')"
    ]
   },
   {
