--- a/tutorials/week6.ipynb
+++ b/tutorials/week6.ipynb
@@ -19,9 +19,7 @@
     "is the coefficient of kinetic friction and $N$ is the magnitude of the\n",
     "normal force that the object applies to the surface.  An object of\n",
     "mass $60\\,{\\rm kg}$ starts from rest at the top of a $\\theta=45^\\circ$\n",
-    "inclined plane.  Assume that $\\mu=0.05$.\n",
-    "%\n",
-    "A force due to air resistance is $-\\lambda v$ (proportional to\n",
+    "inclined plane.  Assume that $\\mu=0.05$.  A force due to air resistance is $-\\lambda v$ (proportional to\n",
     "velocity), where $\\lambda=3\\,{\\rm N s m}^{-1}$.  Recall that the\n",
     "acceleration due to gravity is $g=9.81\\,{\\rm m\\,s^{-2}}$.\n",
     "\n",
