--- a/notebooks/CP101E7.5.ipynb
+++ b/notebooks/CP101E7.5.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## Input data\n",
     "\n",
-    "First we input the necessary data for the problem.  Dictionaries will be used to hold the data."
+    "First we input the necessary data for the problem.  Dictionaries will be used to hold the data.  The stoichiometric coefficients will be held in the"
    ]
   },
   {
@@ -108,6 +108,17 @@
     "    return Kp\n",
     "\n",
     "print(Kp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Law of mass action\n",
+    "\n",
+    "The \n",
+    "\\begin{align*}\n",
+    "\\end{align*}"
    ]
   },
   {
